--- a/frontend/web/css/style.css
+++ b/frontend/web/css/style.css
@@ -1,100 +1,141 @@
 .article-item {
-  margin-bottom: 15px;
+    margin-bottom: 15px;
 }
+
 .article-item .article-title,
 .article-item .article-title a {
-  color: inherit;
-  margin: 0;
+    color: inherit;
+    margin: 0;
 }
+
 .article-item .article-meta,
 .article-item .article-meta a {
-  color: #999;
-  font-size: .85em;
+    color: #999;
+    font-size: .85em;
 }
+
 .article-item .article-meta a {
-  text-decoration: underline;
+    text-decoration: underline;
 }
+
 .article-item .article-thumb {
-  margin-right: 10px;
-  margin-bottom: 10px;
+    margin-right: 10px;
+    margin-bottom: 10px;
 }
+
 .article-item .article-text {
-  margin-top: 7px;
+    margin-top: 7px;
 }
+
 html,
 body {
-  height: 100%;
+    height: 100%;
 }
+
 .wrap {
-  min-height: 100%;
-  height: auto;
-  margin: 0 auto -60px;
-  padding: 0 0 60px;
+    min-height: 100%;
+    height: auto;
+    margin: 0 auto -20px;
+    padding: 0px 0px 5px;
 }
-.wrap > .container {
-  padding: 70px 15px 20px;
+
+.wrap > .container-fluid {
+    padding: 0px 0px 5px 5px;
+}
+.wrap > .container{
+    padding-top: 10px;
+}
+.panel-body >.list-group>.list-group-item{
+    word-spacing: -10px;
+    font-size: 18px;
 }
 .footer {
-  height: 60px;
-  background-color: #f5f5f5;
-  border-top: 1px solid #ddd;
-  padding-top: 20px;
+    height: 60px;
+    background-color: #f5f5f5;
+    border-top: 1px solid #ddd;
+    padding-top: 40px;
 }
+
 .jumbotron {
-  text-align: center;
-  background-color: transparent;
+    text-align: center;
+    background-color: transparent;
 }
+
 .jumbotron .btn {
-  font-size: 21px;
-  padding: 14px 24px;
+    font-size: 21px;
+    padding: 14px 24px;
 }
+
 .not-set {
-  color: #c55;
-  font-style: italic;
+    color: #c55;
+    font-style: italic;
 }
+
 /* add sorting icons to gridview sort links */
 a.asc:after,
 a.desc:after {
-  position: relative;
-  top: 1px;
-  display: inline-block;
-  font-family: 'Glyphicons Halflings';
-  font-style: normal;
-  font-weight: normal;
-  line-height: 1;
-  padding-left: 5px;
+    position: relative;
+    top: 1px;
+    display: inline-block;
+    font-family: 'Glyphicons Halflings';
+    font-style: normal;
+    font-weight: normal;
+    line-height: 1;
+    padding-left: 5px;
 }
+
 a.asc:after {
-  content: "\e151";
+    content: "\e151";
 }
+
 a.desc:after {
-  content: "\e152";
+    content: "\e152";
 }
+
 .sort-numerical a.asc:after {
-  content: "\e153";
+    content: "\e153";
 }
+
 .sort-numerical a.desc:after {
-  content: "\e154";
+    content: "\e154";
 }
+
 .sort-ordinal a.asc:after {
-  content: "\e155";
+    content: "\e155";
 }
+
 .sort-ordinal a.desc:after {
-  content: "\e156";
+    content: "\e156";
 }
+
 .grid-view th {
-  white-space: nowrap;
+    white-space: nowrap;
 }
+
 .hint-block {
-  display: block;
-  margin-top: 5px;
-  color: #999;
+    display: block;
+    margin-top: 5px;
+    color: #999;
 }
+
+.admin-right {
+    background: #FFF;
+}
+
+.aside-left {
+    background-color: #693aff;
+}
+
+.admin-right {
+    background: #32b3ff;
+}
+
 .error-summary {
-  color: #a94442;
-  background: #fdf7f7;
-  border-left: 3px solid #eed3d7;
-  padding: 10px 20px;
-  margin: 0 0 15px 0;
+    color: #a94442;
+    background: #fdf7f7;
+    border-left: 3px solid #eed3d7;
+    padding: 10px 20px;
+    margin: 0 0 15px 0;
 }
+
 /*# sourceMappingURL=style.map */
